# INTERLENA-updates

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  interview-atlas-backend.spec  run.bat  run.command  run_app.py  update_feed.example.json
.github/workflows/: release-macos-updates.yml
.streamlit/: config.toml
backend/: build_backend.py  desktop_entry.py  requirements.txt
backend/app/: config.py  crud.py  db.py  main.py  migrations.py  models.py  schemas.py  settings_store.py  startup_metrics.py  storage.py  update_checker.py  utils.py  version.py
backend/app/api/: applications.py  backups.py  databases.py  emails.py  exports.py  gmail_oauth.py  health.py  onboarding.py  pages.py  settings.py  views.py
backend/app/services/: canonical.py  documents.py  emails.py  exports.py  onboarding.py  views.py
backend/tests/: test_canonical_migrations.py  test_email_body_modes.py  test_email_imap_connection_limits.py  test_email_read_stats.py  test_email_sync_metadata.py  test_gmail_oauth_block_flow.py  test_gmail_oauth_security.py  test_utils.py
docs/: DESKTOP.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  i18n.tsx  main.tsx  pageConfigDebug.ts  state.tsx  types.ts  undoContext.tsx  utils.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  keys.pub  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: ApplicationForm.tsx  BlockPanel.tsx  CameraModal.tsx  ContactsEditor.tsx  (+10 more)
scripts/: measure_backend_startup.py  run.py
(+87 files in other folders)
