[package]
name = "interview-atlas"
version = "0.1.0"
description = "Interview Atlas desktop shell"
authors = ["Interview Atlas"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-write-file", "dialog-save", "shell-open", "process-command-api", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
